<resources>
    <string name="app_name">Team discovery</string>*//
    <string name="Username">Username</string>*//
    <string name="Password">Password</string>*//

    <string name="intro">Move things around.</string>*//
    <string name="option_A">A</string>
    <string name="option_B">B</string>
    <string name="option_C">C</string>
    <string name="option_D">D</string>
    <string name="option_E">E</string>
    <string name="option_F">F</string>
    <string name="option_G">G</string>
    <string name="option_H">H</string>
    <string name="option_I">I</string>
    <string name="option_J">J</string>
    <string name="option_K">K</string>
    <string name="option_L">L</string>
    <string name="option_M">M</string>
    <string name="option_N">N</string>
    <string name="option_O">O</string>
    <string name="option_P">P</string>
    <string name="option_Q">Q</string>
    <string name="option_R">R</string>
    <string name="option_S">S</string>
    <string name="option_T">T</string>
    <string name="option_U">U</string>
    <string name="option_V">V</string>
    <string name="option_W">W</string>
    <string name="option_X">X</string>
    <string name="option_Y">Y</string>
    <string name="option_Z">Z</string>

    <string name="choice_A">A</string>
    <string name="choice_B">B</string>
    <string name="choice_C">C</string>
    <string name="choice_D">D</string>
    <string name="choice_E">E</string>
    <string name="choice_F">F</string>
    <string name="choice_G">G</string>
    <string name="choice_H">H</string>
    <string name="choice_I">I</string>
    <string name="choice_J">J</string>
    <string name="choice_K">K</string>
    <string name="choice_L">L</string>
    <string name="choice_M">M</string>
    <string name="choice_N">N</string>
    <string name="choice_O">O</string>
    <string name="choice_P">P</string>
    <string name="choice_Q">Q</string>
    <string name="choice_R">R</string>
    <string name="choice_S">S</string>
    <string name="choice_T">T</string>
    <string name="choice_U">U</string>
    <string name="choice_V">V</string>
    <string name="choice_W">W</string>
    <string name="choice_X">X</string>
    <string name="choice_Y">Y</string>
    <string name="choice_Z">Z</string>

    <string name="title_activity_test_xml">testXML</string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
</resources>
