<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:paddingLeft="50dp"
    android:paddingRight="50dp" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:text="@string/intro" />

    <TextView
        android:id="@+id/choice_1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/option"
        android:gravity="center"
        android:text="@string/option_A"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/option_2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/option"
        android:gravity="center"
        android:text="@string/option_B"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/option_3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/option"
        android:gravity="center"
        android:text="@string/option_C"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/choice_1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/choice"
        android:gravity="center"
        android:text="@string/choice_A" />

    <TextView
        android:id="@+id/option_2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/choice"
        android:gravity="center"
        android:text="@string/choice_B" />

    <TextView
        android:id="@+id/option_3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/choice"
        android:gravity="center"
        android:text="@string/choice_C" />


</LinearLayout>